MGNLUI-3251 removed 'hidden' placeholder for bottom border of top navigator in pulse, fixing CSS accordingly; Also cleaned up static builders in PulseItemCategoryNavigator component, where plain ctor does just fine. Do not truncate message or task title in detail views (pulse).

--- a/magnolia-ui-vaadin-common-widgets/src/main/resources/VAADIN/themes/admincentraltheme/pulse.scss
+++ b/magnolia-ui-vaadin-common-widgets/src/main/resources/VAADIN/themes/admincentraltheme/pulse.scss
@@ -215,13 +215,8 @@
   font-weight: bold;
   margin: 25px 0 30px 150px;
   text-align: left;
-  text-overflow: ellipsis;
+  white-space: normal;
   width: 430px;
-}
-
-.v-pulse .message-detail  .message-title {
-  text-overflow:auto;
-  white-space:auto;
 }
 
 .v-pulse .message-detail {
